# pyRSR

./: .gitignore  LICENCE  README.md  benchmark_pyrsrx.py  environment.yaml  pyproject.toml  reproduce_issue.py  setup.py
PyRSRMC/: __init__.py  mcmc.py
PyRSRX/: broad_line_fit.py  cython_models.c  cython_models.pyx  diagnostics.py  line_fit.py  ma_line_fit.py  photometry.py  plotting.py
cosmicdawn/: abundances.py  conversions.py  diagnostics.py  line_fitting.py  photometry.py  stacking.py
cosmicdawn/analysis/: calibration.py  composites.py  diagnostics.py  lines.py  spectra.py  stacking.py
cosmicdawn/general/: conversions.py  igm.py  plotting.py  utils.py
cosmicdawn/models/: luminosity_functions.py
cosmicdawn/preprocessing/: combine.py  nirspec.py  preprocess.py  rectify.py
data/: borg-v4_prism-clear_1747_732.spec.fits  excels-uds04-v4_g395m-f290lp_3543_63107.spec.fits  inoue2014_table2.txt  stark-rxcj2248-v4_g395m-f290lp_2478_3.spec.fits
demos/: EXCELS_63107.ipynb  demo_plotting.py  demo_spectra.py
general/: photometry.py
pyRSR/: broad_line_fit.py  diagnostics.py  fitting_helpers.py  line.py  line_bootstrap.py  line_fit.py  line_fitting.py  ma_line_fit.py  plotting.py  stacking.py
tests/: check_physics.py  conftest.py  test_broad_line_fit.py  test_calibration.py  test_composites.py  test_continuum_moving.py  test_continuum_robust.py  test_conversions.py  test_diagnostics.py  test_igm.py  test_line_fitting.py  test_lines.py  test_luminosity_functions.py  test_nirspec.py  test_photometry.py  test_plotting.py  test_spectra.py  test_stacking.py
(+10 files in other folders)
