[build-system]
requires = ["setuptools>=61.0", "wheel", "Cython>=3.0", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "PyRSR"
version = "0.0.1.dev0"
description = "High-redshift galaxy analysis"
readme = "README.md"
authors = [
    { name = "Raunaq Rai", email = "raunaq.rai.25@ucl.ac.uk" }
]
license = { text = "MIT" }
requires-python = ">=3.9"

dependencies = [
    "numpy>=1.22",
    "matplotlib>=3.5",
    "scipy>=1.8",
    "astropy>=5.0",
    "uncertainties>=3.1.7",
    "Cython>=3.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "isort",
    "flake8"
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["build*", "dist*", "*.egg-info", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --maxfail=1 --disable-warnings"

